added config option for stop words, test set and train set file paths

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,2 +1,6 @@
 spark.master=""
 spark.appName="preprocessor"
+
+data.stopwords.path="/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/stopwords.txt"
+data.train.path="/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/x_train.txt"
+data.test.path=""
