--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,4 +4,4 @@ spark.appName = "preprocessor"
 data.stopwords.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/stopwords.txt"
 data.train.doc.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/x_train.txt"
 data.train.cat.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/y_train.txt"
-data.test.path = ""
+data.test.doc.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/x_test.txt"
