Added function for updating the weights for a given category during a single training iteration

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,12 @@
 spark.master = ""
 spark.appName = "preprocessor"
 
+
+#data.stopwords.path = "C:/Users/Brent/IdeaProjects/super-awesome-txt-classifier/example/resources/stopwords.txt"
+#data.train.doc.path = "C:/Users/Brent/IdeaProjects/super-awesome-txt-classifier/example/resources/x_train_s.txt"
+#data.train.cat.path = "C:/Users/Brent/IdeaProjects/super-awesome-txt-classifier/example/resources/y_train_s.txt"
+#data.test.doc.path = "C:/Users/Brent/IdeaProjects/super-awesome-txt-classifier/example/resources/x_test_s.txt"
+
 data.stopwords.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/stopwords.txt"
 data.train.doc.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/x_train_s.txt"
 data.train.cat.path = "/home/brad/Documents/InteliJProjects/super-awesome-txt-classifier/example/resources/y_train_s.txt"
